Fix Android B&R and GLS check boxes for consumers

We changed the enterprise/edu default so that unless the corresponding
policies are explicitly set to "let the user decide," Android B&R and
GLS are disabled and the corresponding check boxes are grayed out.

Unfortunately, the policy handler code that implements this logic runs
for consumer users as well. Consumers have no policies set, so the new
default behavior kicks in, disabling and graying out the Android B&R
and GLS check boxes.

This CL fixes consumer behavior by only controlling B&R and GLS if the
ArcEnabled policy is set. Since this policy is unset for consumers, they
are shielded from the new behavior. Some enterprise users may also have
the policy unset, but ArcEnabled unset or false for enterprise users
means ARC++ is disabled, so B&R and GLS are N/A anyway.

Bug: 849867
Test: ArcServicePolicyHandlerTest and manual verification
Change-Id: Id3b785e4cde02716d54391607a64fac58604ed88
Reviewed-on: https://chromium-review.googlesource.com/1120177
Commit-Queue: Bartosz Fabianowski <bartfab@chromium.org>
Reviewed-by: Maksim Ivanov <emaxx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571879}
Former-commit-id: 0248c495fd24353a1e9feba0981fddd554a7ac08